--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,8 +274,10 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right no-repeat;
-  background-size: cover;
+  /* background: url("../img/hero-bg.jpg") top right no-repeat ; */
+  background: #0678e3;
+  background-size:cover;
+  /* background-position: center; */
   position: relative;
 }
 
